[tool.poetry]
name = "tutorial-opencv"
version = "0.1.0"
description = ""
authors = ["Rômulo Férrer Filho <romulofffufc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.10"
numpy = "^1.19.2"
opencv-python = "^4.4.0"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
